--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -26,6 +26,7 @@
             android:id="@+id/drawer"
             android:layout_width="240dp"
             android:layout_height="match_parent"
+            android:background="@android:color/white"
             android:layout_gravity="start"/>
     </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
