--- a/app/src/main/res/layout/view_exhibit_list_item.xml
+++ b/app/src/main/res/layout/view_exhibit_list_item.xml
@@ -5,11 +5,22 @@
     android:orientation="horizontal">
 
 
-    <ImageView
-        android:id="@+id/thumbnail"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        />
+    <RelativeLayout
+        android:layout_width="128dp"
+        android:layout_height="128dp">
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:layout_centerInParent="true"/>
+        <ImageView
+            android:id="@+id/thumbnail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -19,12 +30,21 @@
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/species"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textStyle="italic"
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"/>
 
     </LinearLayout>
 </LinearLayout>
